--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
 
 .back-to-top {
     position: fixed;
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     right: 45px;
     bottom: 45px;
     z-index: 99;
@@ -239,8 +241,9 @@ h6,
     border-color: var(--primary);
 }
 
+
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), center center no-repeat;
     background-size: cover;
 }
 
