--- a/css/subport.css
+++ b/css/subport.css
@@ -101,3 +101,16 @@
     margin-left: 20px;
     margin-right: 20px;
   }
+
+  .text-container ul {
+    list-style-type: disc; /* Use disc style for bullet points */
+    margin-left: 20px; /* Adjust indentation as needed */
+  }
+  
+  .text-container ul li {
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 1px;
+    color: black;
+  }
+  
