--- a/css/subport.css
+++ b/css/subport.css
@@ -644,7 +644,7 @@ h6,
     margin-bottom: 20px;
   }
   
-  .dropdown select {
+  .suburb-dropdown select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
