updated subport intro detail/added divider into subport&index

--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,11 @@ h6,
     border-right: none;
 }
 
+.divider {
+    width: 800px; /* Adjust width as needed */
+    height: 2px; /* Adjust height as needed */
+    background-color: #ccc; /* Choose your desired color */
+    margin: 20px auto; /* Center the divider horizontally and adjust margin as needed */
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
