--- a/css/subport.css
+++ b/css/subport.css
@@ -251,259 +251,7 @@ h6,
   color: rgba(255, 255, 255, .5);
 }
 
-
-/*** Facility ***/
-.facility-item .facility-icon {
-  position: relative;
-  margin: 0 auto;
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.facility-item .facility-icon::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(255, 255, 255, .9);
-  transition: .5s;
-  z-index: 1;
-}
-
-.facility-item .facility-icon span {
-  position: absolute;
-  content: "";
-  width: 15px;
-  height: 30px;
-  top: 0;
-  left: 0;
-  border-radius: 50%;
-}
-
-.facility-item .facility-icon span:last-child {
-  left: auto;
-  right: 0;
-}
-
-.facility-item .facility-icon i {
-  position: relative;
-  z-index: 2;
-}
-
-.facility-item .facility-text {
-  position: relative;
-  min-height: 250px;
-  padding: 30px;
-  border-radius: 100%;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.facility-item .facility-text::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(255, 255, 255, .9);
-  transition: .5s;
-  z-index: 1;
-}
-
-.facility-item .facility-text * {
-  position: relative;
-  z-index: 2;
-}
-
-.facility-item:hover .facility-icon::before,
-.facility-item:hover .facility-text::before {
-  background: transparent;
-}
-
-.facility-item * {
-  transition: .5s;
-}
-
-.facility-item:hover * {
-  color: #FFFFFF !important;
-}
-
-
-/*** About ***/
-.about-img img {
-  transition: .5s;
-}
-
-.about-img img:hover {
-  background: var(--primary) !important;
-}
-
-
-/*** Classes ***/
-.classes-item {
-  transition: .5s;
-}
-
-.classes-item:hover {
-  margin-top: -10px;
-}
-
-.collapsible {
-  background-color: #f1f1f1;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-
-.active, .collapsible:hover {
-  background-color: #ccc;
-}
-
-.collapsible-content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
-}
-
-
-/*** Team ***/
-.team-item .team-text {
-  position: absolute;
-  width: 250px;
-  height: 250px;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background: #FFFFFF;
-  border: 17px solid var(--light);
-  border-radius: 250px;
-  transition: .5s;
-}
-
-.team-item:hover .team-text {
-  border-color: var(--primary);
-  
-}
-
-
-/*** News ***/
-.news-image {
-  width: 50px; /* Adjust the width as per your preference */
-  height: auto; /* Maintain aspect ratio */
-  margin-bottom: 10px; /* Adjust the margin as needed */
-  border-radius: 10px; /* Add border radius for rounded corners */
-}
-
-/* CSS to align the image and heading horizontally */
-.image-heading-container {
-  display: flex;
-  align-items: center;
-}
-.news-carousel {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-@media (min-width: 576px) {
-  .testimonial-carousel {
-      padding-left: 4rem;
-      padding-right: 4rem;
-  }
-}
-
-.news-carousel .news-item .border {
-  border: 1px dashed #00b98e4d !important;
-}
-
-.news-carousel .owl-nav {
-  position: absolute;
-  width: 100%;
-  height: 45px;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: space-between;
-  z-index: 1;
-}
-
-.news-carousel .owl-nav .owl-prev,
-.news-carousel .owl-nav .owl-next {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #FFFFFF;
-  background: var(--primary);
-  border-radius: 45px;
-  font-size: 20px;
-  transition: .5s;
-}
-
-.news-carousel .owl-nav .owl-prev:hover,
-.news-carousel .owl-nav .owl-next:hover {
-  background: var(--dark);
-}
-
-/* Latest News Buttons */
-.news-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  overflow: hidden; /* Hide overflowing content */
-  margin-bottom: 20px; /* Add margin between news items if desired */
-}
-
-/* Center the contents of <div class="ps-3"> */
-.news-item .ps-3 {
-  align-items: center;
-  justify-content: center;
-}
-
-
-/* Increase margin-top for <p class="fs-5"> */
-.news-item .fs-5 {
-  margin-top: 40px; /* Adjust the margin-top value as needed */
-}
-
-
-.news-item .btn {
-  font-size: 14px;
-  padding: 10px 20px; /* Adjust padding to make the button shorter */
-  margin-top: 30px;
-  border-radius: 25px;
-  background-color: var(--primary);
-  color: #FFFFFF;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.news-item .btn:hover {
-  background-color:  #686868;
-  border-color: #686868;
-}
-
+ 
 
 /*** Footer ***/
 .footer .btn.btn-social {
@@ -580,6 +328,13 @@ h6,
   border-right: none;
 }
 
+
+.divider {
+  width: 500px; /* Adjust width as needed */
+  height: 2px; /* Adjust height as needed */
+  background-color: #ccc; /* Choose your desired color */
+  margin: 20px auto; /* Center the divider horizontally and adjust margin as needed */
+}
 
 
   html {
