--- a/css/subport.css
+++ b/css/subport.css
@@ -352,15 +352,17 @@ h6,
     margin-bottom: 30px;
   }
   
+
+  .container {
+    max-width: 900px;
+    margin: 0 auto;
+  }
+
   .map {
     width: 100%; 
     height: 500px;
   }
   
-  .container {
-    max-width: 900px;
-    margin: 0 auto;
-  }
   
   .map-bar {
     display: flex;
@@ -432,7 +434,7 @@ h6,
   }
   
   .text-container p {
-     font-size: 14px;
+    font-size: 14px;
     line-height: 1;
     letter-spacing: 1px;
     text-align: justify;
@@ -459,4 +461,8 @@ h6,
     height: 600px; /* Adjust height as needed */
     border-radius: 10px; /* Adjust the radius as needed */
     overflow: hidden; /* Ensure content inside map doesn't overflow rounded corners */
+    margin: auto; /* Center the map horizontally */
+    display: flex;
+    justify-content: center; /* Center the map horizontally */
+    align-items: center; /* Center the map vertically */
 }
