--- a/css/subport.css
+++ b/css/subport.css
@@ -97,7 +97,10 @@ h6,
 .font-secondary {
   font-family: 'Lobster Two', cursive;
 }
-
+.centered-heading {
+  text-align: center;
+  margin-bottom: 40px;
+}
 
 /*** Navbar ***/
 .navbar .navbar-nav .nav-link {
