--- a/css/info_hub.css
+++ b/css/info_hub.css
@@ -98,7 +98,13 @@ h6,
     font-family: 'Lobster Two', cursive;
 }
 
-
+.divider {
+    margin-top: 0; 
+    margin-bottom: 0; 
+  }
+ .container-xxl {
+    margin-bottom: 0; 
+  }
 /*** Navbar ***/
 .navbar .navbar-nav .nav-link {
     padding: 30px 15px;
