--- a/css/info_hub.css
+++ b/css/info_hub.css
@@ -98,6 +98,13 @@ h6,
     font-family: 'Lobster Two', cursive;
 }
 
+.h-100 h4 {
+  font-size: 22px; /* Specify the desired font size */
+}
+.h-100 p,
+.h-100 ul li {
+  font-size: 15px; /* Specify the desired font size */
+}
 .divider {
     margin-top: 0; 
     margin-bottom: 0; 
